k8s/deployment.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: howmuchami-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
    - hosts:
        - howmuchami.com
      secretName: howmuchami-tls
  rules:
    - host: howmuchami.com
      http:
        paths:
          - path: /
            backend:
              serviceName: howmuchami-web-svc
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: howmuchami-web-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: howmuchami-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: howmuchami-web
spec:
  selector:
    matchLabels:
      app: howmuchami-web
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: howmuchami-web
    spec:
      containers:
        - name: app
          image: astrocket/howmuchami:0.0.1
          imagePullPolicy: Always
          command: ["bin/rails", "s", "-b", "0.0.0.0"]
          volumeMounts:
            - mountPath: /assets
              name: assets
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 100m
              memory: 500Mi
          readinessProbe:
            httpGet:
              path: /health_check
              port: 3000
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 2
            timeoutSeconds: 5
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - "cp -r /app/public/* /assets"
        - name: nginx
          image: nginx:1.17-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 50m
              memory: 200Mi
          volumeMounts:
            - mountPath: /assets
              name: assets
              readOnly: true
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf
              subPath: nginx.conf
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health_check
              port: 80
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 2
            timeoutSeconds: 5
      volumes:
        - name: nginx-conf
          configMap:
            name: howmuchami-nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: assets
          emptyDir: {}
